<package>
  <name>lwr_description</name>
  <version>0.1.0</version>
  <description>The lwr_description package contains the URDF model of a KUKA LWR 4+ arm.</description>

   <maintainer email="huibindu1@gmail.com">Huibin Du</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
